--- a/html_practice/test.html
+++ b/html_practice/test.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>HTML/CSS</h1>
+    <p>Hypertext Markup Language는 문서의 논리적인 구조를 표기하는 언어입니다.</p>
 </body>
 </html>
