My first html again

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>My first HTML</title>
     <link rel="style" href="style.css">
     <style>
         /* css 코드 */
@@ -12,52 +13,50 @@
 
     </script>
 </head>
+
 <body>
-  <h1>HTML tag들의 용도에 따른 분류</h1>
-  <h2>콘텐츠 분류</h2>
-  <h3>h1-h6 : 제목을 표시하며, 문서의 노리적 흐름을 나타냅니다.</h3>
-  
-  <h3>p : 문단(paragraph)을 구분합니다.</h3>
-  <p>이것은 하나의 문단입니다.</p>
-  
-  <h3>div : 하나의 영역을 구분합니다.</h3>
-  <div>이것은 하나의 영역입니다.</div>
-  <hr>
+    <h1>HTML tag들의 용도에 따른 분류</h1>
+    <h2>콘텐츠 분류</h2>
+    <h3>h1-h6 : 제목을 표시하며, 문서의 노리적 흐름을 나타냅니다.</h3>
 
-  <h2>텍스트 관련</h2>
-  <h3>span 태그</h3>
-  <span>텍스트 콘텐츠를 나타냅니다. span은 인라인 요소입니다.</span>
+    <h3>p : 문단(paragraph)을 구분합니다.</h3>
+    <p>이것은 하나의 문단입니다.</p>
 
-  <h3>anchor 태그</h3>
-  <a href="https://www.google.com" target="_blank">구글로 갈 수 있는 anchor태그입니다.!</a>
+    <h3>div : 하나의 영역을 구분합니다.</h3>
+    <div>이것은 하나의 영역입니다.</div>
+    <hr>
 
-  <h3>강조와 기울임, 줄바꿈</h3>
-  <span>강조</span> <span><b>강조</b></span>
-  <div></div>
-  <span>기울임</span> <span><i>기울임</i></span>
-  <hr>
+    <h2>텍스트 관련</h2>
+    <h3>span 태그</h3>
+    <span>텍스트 콘텐츠를 나타냅니다. span은 인라인 요소입니다.</span>
 
-  <h2>목록 생성</h2>
-<ul>
-  <li>순서가 없는 리스트</li>
-  <li>목록 아이템</li>
-</ul>
-<h1>순서가 있는 리스트</h1>
-<ol>
-  <li>순서가 있는 리스트</li>
-  <li>목록 아이템</li>
-</ol>
-<hr>
+    <h3>anchor 태그</h3>
+    <a href="https://www.google.com" target="_blank">구글로 갈 수 있는 anchor태그입니다.!</a>
 
-<h1>이미지와 멀티미디어</h1>
-<img src="피카츄_(1).png" alt="피카츄 로고" draggable="false">
-<iframe width="560" 
-        height="315" 
-        src=https://www.youtube.com/watch?v=a57hvjknIcQ
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    <h3>강조와 기울임, 줄바꿈</h3>
+    <span>강조</span> <span><b>강조</b></span>
+    <div></div>
+    <span>기울임</span> <span><i>기울임</i></span>
+    <hr>
+
+    <h2>목록 생성</h2>
+    <ul>
+        <li>순서가 없는 리스트</li>
+        <li>목록 아이템</li>
+    </ul>
+    <h1>순서가 있는 리스트</h1>
+    <ol>
+        <li>순서가 있는 리스트</li>
+        <li>목록 아이템</li>
+    </ol>
+    <hr>
+
+    <h1>이미지와 멀티미디어</h1>
+    <img src="피카츄.png" alt="피카츄 로고" draggable="false">
+    <iframe width="560" height="315" src=https://www.youtube.com/watch?v=a57hvjknIcQ title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
-</iframe>
+    </iframe>
 </body>
+
 </html>
