선택자 연습

--- a/Skeleton/Skeleton.html
+++ b/Skeleton/Skeleton.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Skeleton.css">
+  <title>Document</title>
 </head>
 <body>
-    <label>아이디 :</label> 
-    <input type="text" placeholder="아이디를 입력하세요!">
+  <h1>선택자 연습</h1>
+  <span id="happy">Learn</span>
+  <span class="html">HTML</span>
+  <p>CSS</p>
+  <span color: purple;>링크로 가기 : </span>
+  <a href="https://www.naver.com">Naver</a>
+  
 </body>
 </html>
